--- a/Selenium.Com.OrangeCRM/ExtentReports/newExtentReports.html
+++ b/Selenium.Com.OrangeCRM/ExtentReports/newExtentReports.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-11-02 21:23:47</span>
+					<span class='suite-started-time'>2020-11-03 14:48:47</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 41s+433ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 41s+29ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 41s+433ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 41s+29ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-11-02 21:23:06</span> 
+							<span class='panel-lead suite-started-time'>2020-11-03 14:48:06</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-11-02 21:23:47</span> 
+							<span class='panel-lead suite-ended-time'>2020-11-03 14:48:47</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='abcae4e5-a385-4711-8f34-ffa9be935905'>
+										<li class='collection-item test displayed active pass ' extentid='ffd9439e-49f3-475b-b9c1-adf04a0ec2d0'>
 											<div class='test-head'>
 												<span class='test-name'>Test Name is : HLogin </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,7 +245,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-02 21:23:16</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-03 14:48:16</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -264,12 +264,17 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:19</td>
+																	<td class='timestamp'>14:48:19</td>
 																	<td class='step-details'>Test is passed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:19</td>
+																	<td class='timestamp'>14:48:19</td>
+																	<td class='step-details'>Test is passed</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>14:48:19</td>
 																	<td class='step-details'>HLogin</td>
 																</tr>
 														</tbody>
@@ -279,7 +284,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='ef552cba-be60-48db-906f-caa87297bb81'>
+										<li class='collection-item test displayed active pass ' extentid='d06aee31-9cbb-4f91-866f-c281c6ff6b77'>
 											<div class='test-head'>
 												<span class='test-name'>Test Name is : HLogin </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -287,7 +292,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-02 21:23:28</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-03 14:48:28</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -306,12 +311,12 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:32</td>
+																	<td class='timestamp'>14:48:32</td>
 																	<td class='step-details'>Test is passed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:32</td>
+																	<td class='timestamp'>14:48:32</td>
 																	<td class='step-details'>HLogin1</td>
 																</tr>
 														</tbody>
@@ -321,7 +326,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='78ed56a7-3234-45cf-b8f4-db1ec6b0cb69'>
+										<li class='collection-item test displayed active pass ' extentid='4495d6d3-9562-4cff-85df-e9db7d61385d'>
 											<div class='test-head'>
 												<span class='test-name'>Test Name is : ADDUsers </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -329,9 +334,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-02 21:23:41</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-11-02 21:23:47</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 6s+155ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-11-03 14:48:41</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-11-03 14:48:47</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+910ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -348,12 +353,12 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:46</td>
+																	<td class='timestamp'>14:48:46</td>
 																	<td class='step-details'>AddUsers test is passed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:23:46</td>
+																	<td class='timestamp'>14:48:46</td>
 																	<td class='step-details'>AddUsers</td>
 																</tr>
 														</tbody>
