--- a/Selenium.Com.OrangeCRM/test-output/emailable-report.html
+++ b/Selenium.Com.OrangeCRM/test-output/emailable-report.html
@@ -9,33 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">N11 Test Suite</th></tr>
-<tr><td><a href="#t0">LoginTest</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">6</td><td class="num">87,860</td><td></td><td></td></tr>
+<tr><td><a href="#t0">LoginTest</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">130,399</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">N11 Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest</td><td><a href="#m0">TEST1</a></td><td rowspan="1">1608295785042</td><td rowspan="1">3829</td></tr><tr class="failedeven"><td><a href="#m1">TEST2</a></td><td rowspan="1">1608295799359</td><td rowspan="1">4067</td></tr><tr class="failedodd"><td rowspan="2">com.test.OrangeCRM.LoginTest1</td><td><a href="#m2">TEST3</a></td><td rowspan="1">1608295814074</td><td rowspan="1">2711</td></tr><tr class="failedodd"><td><a href="#m3">TEST4</a></td><td rowspan="1">1608295828214</td><td rowspan="1">3705</td></tr><tr class="failedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest3</td><td><a href="#m4">TEST5</a></td><td rowspan="1">1608295842632</td><td rowspan="1">3999</td></tr><tr class="failedeven"><td><a href="#m5">TEST6</a></td><td rowspan="1">1608295857224</td><td rowspan="1">3786</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">N11 Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest</td><td><a href="#m0">TEST1</a></td><td rowspan="1">1610006793571</td><td rowspan="1">3369</td></tr><tr class="passedeven"><td><a href="#m1">TEST2</a></td><td rowspan="1">1610006816208</td><td rowspan="1">2778</td></tr><tr class="passedodd"><td rowspan="2">com.test.OrangeCRM.LoginTest1</td><td><a href="#m2">TEST3</a></td><td rowspan="1">1610006836906</td><td rowspan="1">2935</td></tr><tr class="passedodd"><td><a href="#m3">TEST4</a></td><td rowspan="1">1610006857165</td><td rowspan="1">3465</td></tr><tr class="passedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest3</td><td><a href="#m4">TEST5</a></td><td rowspan="1">1610006877481</td><td rowspan="1">3349</td></tr><tr class="passedeven"><td><a href="#m5">TEST6</a></td><td rowspan="1">1610006898108</td><td rowspan="1">2742</td></tr></tbody>
 </table>
-<h2>LoginTest</h2><h3 id="m0">com.test.OrangeCRM.LoginTest#TEST1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest.TEST1(LoginTest.java:66)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.test.OrangeCRM.LoginTest#TEST2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest.TEST2(LoginTest.java:88)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.test.OrangeCRM.LoginTest1#TEST3</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest1.TEST3(LoginTest1.java:66)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.test.OrangeCRM.LoginTest1#TEST4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest1.TEST4(LoginTest1.java:88)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.test.OrangeCRM.LoginTest3#TEST5</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest3.TEST5(LoginTest3.java:66)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.test.OrangeCRM.LoginTest3#TEST6</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Dashboard] but found [Tableau de bord]
-	at com.test.OrangeCRM.LoginTest3.TEST6(LoginTest3.java:88)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>LoginTest</h2><h3 id="m0">com.test.OrangeCRM.LoginTest#TEST1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.test.OrangeCRM.LoginTest#TEST2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.test.OrangeCRM.LoginTest1#TEST3</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.test.OrangeCRM.LoginTest1#TEST4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.test.OrangeCRM.LoginTest3#TEST5</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.test.OrangeCRM.LoginTest3#TEST6</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
