--- a/Selenium.Com.OrangeCRM/test-output/old/N11 Test Suite/methods.html
+++ b/Selenium.Com.OrangeCRM/test-output/old/N11 Test Suite/methods.html
@@ -1,44 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>N11 Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c16b87">  <td>20/12/18 18:19:33</td>   <td>0</td> <td title="&gt;&gt;TestBase.starttest()[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&gt;&gt;starttest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:19:34</td>   <td>701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:19:45</td>   <td>11122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST1(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">TEST1</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:19:49</td>   <td>15308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:19:49</td>   <td>15957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:19:59</td>   <td>25439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST2(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">TEST2</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c2a9ac">  <td>20/12/18 18:20:03</td>   <td>29895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:04</td>   <td>30532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest1.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:14</td>   <td>40154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest1.TEST3(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">TEST3</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:18</td>   <td>44276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest1.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:18</td>   <td>44920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest1.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:28</td>   <td>54294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest1.TEST4(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">TEST4</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="9795b6">  <td>20/12/18 18:20:32</td>   <td>58332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest1.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest1@76f2bbc1]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:20:32</td>   <td>58992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest3.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:20:42</td>   <td>68712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest3.TEST5(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">TEST5</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:20:46</td>   <td>73047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest3.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:20:47</td>   <td>73686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest3.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:20:57</td>   <td>83304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest3.TEST6(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">TEST6</td> 
-  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="b798bb">  <td>20/12/18 18:21:01</td>   <td>87435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest3.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest3@68e965f5]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>20/12/18 18:21:01</td>   <td>88075</td> <td title="&lt;&lt;TestBase.closedriver()[pri:0, instance:com.test.OrangeCRM.LoginTest@8317c52]">&lt;&lt;closedriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
+<tr bgcolor="89daf3">  <td>21/01/07 13:36:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.starttest()[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&gt;&gt;starttest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:15</td>   <td>3079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:33</td>   <td>21199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST1(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">TEST1</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:36</td>   <td>24575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:39</td>   <td>27492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:56</td>   <td>43836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST2(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">TEST2</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/01/07 13:36:58</td>   <td>46617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:01</td>   <td>48917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest1.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:16</td>   <td>64534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest1.TEST3(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">TEST3</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:19</td>   <td>67471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest1.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:22</td>   <td>70245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest1.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:37</td>   <td>84793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest1.TEST4(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">TEST4</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/01/07 13:37:40</td>   <td>88263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest1.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest1@647fd8ce]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:37:43</td>   <td>90951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest3.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:37:57</td>   <td>105109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest3.TEST5(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">TEST5</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:38:00</td>   <td>108461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest3.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:38:03</td>   <td>110763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest3.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:38:18</td>   <td>125736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest3.TEST6(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">TEST6</td> 
+  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>21/01/07 13:38:20</td>   <td>128481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest3.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest3@159f197]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="89daf3">  <td>21/01/07 13:38:23</td>   <td>131524</td> <td title="&lt;&lt;TestBase.closedriver()[pri:0, instance:com.test.OrangeCRM.LoginTest@6193932a]">&lt;&lt;closedriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
 </table>
